Kserve/poc/distributed_Inferenceservice/default-feature/raw-ingress/3.deploymentStrategy-rollingUpdate-rest/disvc-v1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    group: sklearn-v2-iris-rest-v1
  name: sklearn-v2-iris-rest-v1
  namespace: kserve-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    disvc.group: sklearn-v2-iris-rest-v1
  sessionAffinity: ClientIP
  type: ClusterIP
