Kserve/poc/distributed_Inferenceservice/default-feature/raw-ingress/3.deploymentStrategy-rollingUpdate-rest/disvc-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sklearn-v2-iris-rest
  namespace: kserve-demo
spec:
  rules:
  - host: sklearn-v2-iris-rest-kserve-demo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sklearn-v2-iris-rest-v2
            port:
              number: 80
